--- a/src/app/src/main/res/values/strings.xml
+++ b/src/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="nav_my_events">My events</string>
     <string name="nav_hosted_events">Hosted events</string>
     <string name="nav_profile">Profile</string>
+    <string name="nav_notifications">Notifications</string>
 </resources>
