--- a/src/app/src/main/res/values/strings.xml
+++ b/src/app/src/main/res/values/strings.xml
@@ -7,4 +7,8 @@
     <string name="nav_hosted_events">Hosted events</string>
     <string name="nav_profile">Profile</string>
     <string name="add_event">Add Event</string>
+    <string name="event_banner">The Event Banner</string>
+    <string name="create_event_description_qr">Create the Event Description QR Code</string>
+    <string name="create_event_checkin_qr">Create the Event Checkin QR Code</string>
+    <string name="create_event_location">Select the Events Location</string>
 </resources>
