--- a/src/app/src/main/res/values/strings.xml
+++ b/src/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="nav_all_image">All Images</string>
     <string name="unsign_up">Withdraw Sign Up</string>
     <string name="sign_up">Sign Me Up</string>
+    <string name="event_full">Event Already Full</string>
 </resources>
